fixed ready issue

--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
+
     <title>Morse Code Encoder</title>
 </head>
 <body>
     <div class="header">
         <h1 class="header__text" >Morse-Code Encoder and Decoder</h1>
     </div>
+    <!-- <div>
+        <p>Instructions : Enter you English in the Encoder or Morse Code in the Decode and hit the button.</p>
+        <p>In this morse code three spaces "___" means it is a new letter, a "/" means it is a new word.</p>
+        <h3>HAVE FUN!!</h3>
+    </div> -->
     <form>
         <div class = "container container__input">
             <div>
@@ -30,5 +36,6 @@
         </div>     
     </form>
     <script src = "../js/index.js"></script>
+    <!-- <script type="module" src="../js/morsecode.js"></script> -->
 </body>
 </html>
